# hyro

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: render.rs
benches/templates/: form_and_context.html.jinja2  plain.html.jinja2
examples/basic/: Cargo.toml
examples/basic-trillium/: Cargo.toml
examples/basic-trillium/src/: main.rs
examples/basic-trillium/templates/: index.html.j2
examples/basic/src/: main.rs
examples/basic/style/: .main.css  header.css
examples/basic/templates/: hello.html.jinja2  index.html.jinja2  navbar.html.jinja2  splash.html.jinja2
examples/crud/: Cargo.toml  README.md
examples/crud/migrations/: 20230807135240_todos.sql
examples/crud/src/: main.rs
examples/crud/templates/: index.html.j2  todo-edit.html.j2  todo.html.j2
src/: app.rs  config.rs  hmr.js  hmr.rs  lib.rs  log.rs  render.rs  router.rs  style.rs  template.rs
src/framework/: framework_axum.rs  framework_trillium.rs  mod.rs
src/runtime/: mod.rs  runtime_smol.rs  runtime_tokio.rs
