[package]
name = "hyro"
version = "0.3.1"
edition = "2021"
description = "Hypermedia Rust Orchestration - a refreshing web framework"
authors = ["Carter Reeb <me@carteris.online>"]
repository = "https://github.com/carterisonline/hyro"
homepage = "https://github.com/carterisonline/hyro"
license = "MIT"
documentation = "https://docs.rs/hyro"
readme = "README.md"
categories = ["http-server", "web-programming", "template-engine"]

[dependencies]
axum = { version = "0.6", features = ["ws", "macros"] }
futures = "0.3"
if-addrs = "0.10"
lightningcss = { version = "1.0.0-alpha.44", features = [
    "bundler",
    "browserslist",
] }
minijinja = { version = "1", features = ["unstable_machinery"] }
notify = "6"
once_cell = "1"
parking_lot = "0.12"
serde_urlencoded = "0.7"
tap = "1"
tokio = { version = "1", default-features = false }
tower-http = { version = "0.4", features = ["fs", "trace"] }
walkdir = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "render"
harness = false

[workspace]
members = ["examples/*"]
