[package]
name = "example-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyro = { path = "../../" }
tower-http = "0.4"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
